fix defolio alignment

--- a/style.css
+++ b/style.css
@@ -369,6 +369,10 @@ section {
 	margin-top: 48px;
 }
 
+.centered {
+	text-align: center;
+}
+
 .day {
 	display: inline-block;
 	padding: 12px;
